Resolved overflow issue

--- a/css/_tour.scss
+++ b/css/_tour.scss
@@ -1,3 +1,7 @@
+body {
+    overflow: hidden;
+}
+
 .startScherm,
 .stopScherm {
     width: 100%;
