--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,9 @@
 
 body {
   font-family: "Open Sans", sans-serif;
+}
+
+body {
   overflow: hidden;
 }
 
